--- a/app/Discipulado/app/src/main/res/values/strings.xml
+++ b/app/Discipulado/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">Discipulado</string>
     <string name="action_settings">Settings</string>
     <string name="url">http://discipulado.esy.es</string>
-    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-    <!--
-    <string name="banner_ad_unit_id">ca-app-pub-4422721417358840~9938633086</string>
-    -->
+    <!-- <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
+    <string name="banner_ad_unit_id">ca-app-pub-4422721417358840~6678009882</string>
 </resources>
